--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
 				<header>
 					<span class="image avatar"><img src="images/avatar.jpg" alt="" /></span>
 					<h1 id="logo"><a href="#">Patrick Haller</a></h1>
-					<p>This website is currently under construction<br />
-					K bye</p>
+					<p>This website is currently under construction. K bye</p>
 				</header>
 				<nav id="nav">
 					<ul>
@@ -54,8 +53,8 @@
 								<div class="container">
 									<header class="major">
 										<h2>Welcome</h2>
-										<p>In the meantime, please visit<br />
-										<a href="www.cl.uzh.ch/phaller">our institute webpage</a>.</p>
+										<p>This site is not ready yet. In the meantime, <br />
+										please visit <a href="www.cl.uzh.ch/phaller">our institute webpage</a>.</p>
 									</header>
 									<p>Faucibus sed lobortis aliquam lorem blandit. Lorem eu nunc metus col. Commodo id in arcu ante lorem ipsum sed accumsan erat praesent faucibus commodo ac mi lacus. Adipiscing mi ac commodo. Vis aliquet tortor ultricies non ante erat nunc integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum.</p>
 								</div>
